2009-05-05  Stefan Kost  <ensonic@users.sf.net>

	* Jeskola/Noise/Makefile.am:
	* Jeskola/Noise/Makefile.am (added):
	  Add missing Makefile.am.

2009-05-04  Stefan Kost  <ensonic@users.sf.net>

	* FSM/dspchips/DSPChips.h:
	* Matilde/Tracker/BuzzInstrument.cpp:
	* Matilde/Tracker/BuzzSample.cpp:
	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.h:
	* Matilde/Tracker/Tracker.cpp:
	  Build warning fixes.

2009-05-04  Stefan Kost  <ensonic@users.sf.net>

	* CyanPhase/DTMF/DTMF-1.cpp:
	* CyanPhase/DTMF/Makefile.am:
	* Ensonic/CallbackTester/CallbackTester.cpp:
	* Jeskola/Freeverb/main.cpp:
	* Jeskola/Freeverb/revmodel.cpp:
	* Jeskola/Makefile.am:
	* Jeskola/Ninja/Ninja.cpp:
	* Jeskola/Noise/Noise.cpp:
	* Makk/M3/M3.cpp:
	* Makk/M3/Makefile.am:
	* Makk/M4/M4.cpp:
	* Makk/M4/Makefile.am:
	* common/dsplib/dsplib.cpp:
	  Masssive dsplib usage fix. We nned to call DSP_Init from the plugins Init
	  as we link statically to dsplib right now.
	
	* HACKING:
	  More formatting and tips for porting.

	* configure.ac:
	  Add Jeskola Noise.
	
	* gen_makefile_am.sh:
	  Add LIBADD if plugin uses dsplib or mdk.

2009-05-03  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PhatMan/FSM_PhatMan.prs:
	* FSM/PhatMan/Makefile.am:
	* FSM/PhatMan/FSM_PhatMan.prs (added):
	* FSM/PhatMan/PhatMan.cpp (added):
	* FSM/PhatMan/Chorus.cpp (deleted):
	  Rename cpp and add presets.

	* Jeskola/Freeverb/Makefile.am:
	* Jeskola/Freeverb/revmodel.cpp:
	* common/dsplib/dsplib.cpp:
	* Jeskola/Freeverb/Makefile.am (added):
	  Fix the linker error and add missing Makefile.am

2009-05-02  Stefan Kost  <ensonic@users.sf.net>

	* FSM/PanzerDelay/FSM_PanzerDelay.prs:
	* FSM/PanzerDelay/Makefile.am:
	* FSM/PanzerDelay/FSM_PanzerDelay.prs (added):
	  Add presets.

	* Jeskola/Freeverb/denormals.h:
	* Jeskola/Freeverb/main.cpp:
	* Jeskola/Freeverb/revmodel.cpp:
	* Jeskola/Freeverb/revmodel.h:
	* Jeskola/Makefile.am:
	* configure.ac:
	  It build, but I get "undefined symbol: _Z11DSP_BW_WorkR8CBWStatePfmi"